update app for bug reporting
